--- a/package.json
+++ b/package.json
@@ -13,7 +13,14 @@
     "@astrojs/check": "^0.8.3",
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.12.2",
+    "axios": "^1.7.3",
+    "express": "^4.19.2",
     "tailwindcss": "^3.4.7",
     "typescript": "^5.5.4"
-  }
+  },
+  "description": "```sh\r npm create astro@latest -- --template basics\r ```",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
